<resources>
    <string name="app_name">meau</string>
    <string name="fraseInicial1">Bem vindo ao Meau!</string>
    <string name="fraseInicial2">Aqui você pode adotar, doar e ajudar</string>
    <string name="fraseInicial3">cães e gatos com facilidade.</string>
    <string name="fraseInicial4">Qual seu interesse?</string>
    <string name="ola">Olá!</string>
    <string name="ops">Ops!</string>
    <string name="login">login</string>
    <string name="adotar">ADOTAR</string>
    <string name="ajudar">AJUDAR</string>
    <string name="cadastrarAnimal">CADASTRAR ANIMAL</string>
    <string name="completeName">NOME COMPLETO</string>
    <string name="age">IDADE</string>
    <string name="email">EMAIL</string>
    <string name="location">LOCALIZAÇÃO</string>
    <string name="address">ENDEREÇO</string>
    <string name="history_list">LISTA DE HISTÓRIAS</string>
    <string name="phone">TELEFONE</string>
    <string name="username">NOME DE USUÁRIO</string>
    <string name="history">HISTÓRICO</string>
    <string name="chat">CHAT</string>
    <string name="histories">HISTÓRIAS</string>

</resources>
