<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/backGroundApp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:paddingTop="4dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:civ_border_width="2dp"
            android:src="@drawable/victor"
            app:civ_border_color="@color/backGroundApp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:id="@+id/profileNamePic"
            android:textSize="15dp"
            android:text="Victor Zaffalon"
            android:gravity="center"
            android:textColor="@color/corLetraButtons"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:id="@+id/locationHeader"
            android:textSize="15dp"
            android:text="@string/location"
            android:textColor="@color/azulApp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/profileNamePic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="230dp"
            android:layout_height="25dp"
            android:id="@+id/location"
            android:textSize="17dp"
            android:text="Sudoeste"
            android:gravity="center"
            android:textColor="@color/corLetraTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/locationHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="45dp"
            android:layout_height="25dp"
            android:id="@+id/ageHeader"
            android:textSize="15dp"
            android:text="@string/age"
            android:textColor="@color/azulApp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="230dp"
            android:layout_height="25dp"
            android:id="@+id/age"
            android:text="22 anos"
            android:gravity="center"
            android:textSize="17dp"
            android:textColor="@color/corLetraTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/ageHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:id="@+id/historyHeader"
            android:textSize="15dp"
            android:text="@string/history"
            android:textColor="@color/azulApp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/age"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="230dp"
            android:layout_height="25dp"
            android:id="@+id/history"
            android:text="Adotou 20 cachorros"
            android:textSize="17dp"
            android:gravity="center"
            android:textColor="@color/corLetraTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/historyHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:layout_width="148dp"
            android:layout_height="40dp"
            android:background="@color/azulApp"
            android:id="@+id/buttonChat"
            android:text="@string/chat"
            android:textSize="8pt"
            android:fontFamily="Roboto"
            android:textColor="@color/corLetraButtons"
            app:layout_constraintTop_toBottomOf="@id/history"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="23dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonHistories" />

        <Button
            android:layout_width="148dp"
            android:layout_height="40dp"
            android:background="@color/azulApp"
            android:id="@+id/buttonHistories"
            android:text="@string/histories"
            android:textSize="8pt"
            android:fontFamily="Roboto"
            android:textColor="@color/corLetraButtons"
            app:layout_constraintTop_toBottomOf="@id/history"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="23dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonChat" />


    </android.support.constraint.ConstraintLayout>

